Fix grid spacing

--- a/src/backpack/backpack.css
+++ b/src/backpack/backpack.css
@@ -9,7 +9,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-auto-rows: 200px;
-    grid-gap: 1em;
+    grid-gap: 2.5em;
     margin: 2.5em;
 }
 
